--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
+                <a href="#about" class="nav-item nav-link">About Me</a>
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">ProMan</h1>
+                <h1 class="text-primary fw-bold m-0">KMG</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projects</a>
+                <a href="#certifications" class="nav-item nav-link">Certifications</a>
                 <a href="#team" class="nav-item nav-link">Team</a>
                 <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -336,9 +337,9 @@
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Creative Design</h4>
+                            <h4 class="mb-3">Data Analyst</h4>
                             <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <span>leverages advanced analytical, statistical, and programming skills to extract meaningful insights from your datasets. </span>
                         </div>
                     </div>
                 </div>
@@ -348,9 +349,9 @@
                             <i class="fa fa-code-branch fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Graphic Design</h4>
+                            <h4 class="mb-3">Data science / ML</h4>
                             <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <span>Applies data-driven methods and algorithms to build intelligent systems that learn from your data and helps you make predictions or decisions without explicit programming.</span>
                         </div>
                     </div>
                 </div>
@@ -360,9 +361,9 @@
                             <i class="fa fa-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Web Design</h4>
+                            <h4 class="mb-3">Control Design</h4>
                             <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <span>designs, implements, and optimizes systems that regulate the behavior of machines, processes, or devices to achieve desired performance</span>
                         </div>
                     </div>
                 </div>
@@ -372,9 +373,9 @@
                             <i class="fa fa-laptop-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">UI/UX Design</h4>
+                            <h4 class="mb-3">Complex Systems Engineer</h4>
                             <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
+                            <span>designing, analyzing, and managing systems composed of many interconnected and interdependent components, where behavior emerges from the interactions rather than from individual parts alone.</span>
                         </div>
                     </div>
                 </div>
@@ -460,7 +461,7 @@
     <!-- Projects End -->
 
     <!-- Certification Start -->
-    <div class="container-xxl py-6 pt-5" id="project">
+    <div class="container-xxl py-6 pt-5" id="certifications">
         <div class="container">
             <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -566,7 +567,7 @@
                         <h5 class="text-center mt-2">Machine Learning Specialization</h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second">
+                <div class="col-lg-4 col-md-6 portfolio-item *">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/certif_10.jpg" alt="">
                         <div class="portfolio-btn">
